@@ -4,21 +4,21 @@ import com.quantumbooks.core.dto.BillItemDto;
 import com.quantumbooks.core.dto.PaginatedResponseDto;
 import com.quantumbooks.core.entity.BillItem;
 import com.quantumbooks.core.entity.Bill;
+import com.quantumbooks.core.exception.ResourceNotFoundException;
 import com.quantumbooks.core.mapper.BillItemMapper;
 import com.quantumbooks.core.repository.BillItemRepository;
 import com.quantumbooks.core.repository.BillRepository;
 import com.quantumbooks.core.specification.BillItemSpecification;
-import jakarta.persistence.EntityNotFoundException;
+import com.quantumbooks.core.util.PaginationSortingUtils;
+import com.quantumbooks.core.util.PaginationUtils;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,67 +27,63 @@ public class BillItemService {
     private final BillRepository billRepository;
     private final BillItemMapper billItemMapper;
 
-    @Transactional(readOnly = true)
     public PaginatedResponseDto<BillItemDto> getBillItems(int page, int size, String search, String[] sort) {
-        Sort.Direction direction = Sort.Direction.ASC;
-        String property = "itemId";
-        if (sort[0].equalsIgnoreCase("desc")) {
-            direction = Sort.Direction.DESC;
-            property = sort[1];
+        Pageable pageable = PaginationSortingUtils.createPageable(page, size, sort);
+        Specification<BillItem> spec = Specification.where(null);
+
+        if (search != null && !search.isEmpty()) {
+            spec = spec.and(BillItemSpecification.withDescriptionOrBillId(search));
         }
 
-        Pageable pageable = PageRequest.of(page, size, Sort.by(direction, property));
-        Page<BillItem> billItemPage = billItemRepository.findAll(BillItemSpecification.withDescriptionOrBillId(search), pageable);
+        Page<BillItem> billItemPage = billItemRepository.findAll(spec, pageable);
 
-        List<BillItemDto> billItemDtos = billItemPage.getContent().stream()
+        List<BillItemDto> billItems = billItemPage.getContent().stream()
                 .map(billItemMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
 
-        PaginatedResponseDto<BillItemDto> response = new PaginatedResponseDto<>();
-        response.setItems(billItemDtos);
-        response.setCurrentPage(billItemPage.getNumber());
-        response.setItemsPerPage(billItemPage.getSize());
-        response.setTotalItems(billItemPage.getTotalElements());
-        response.setTotalPages(billItemPage.getTotalPages());
-
-        return response;
+        return PaginationUtils.createPaginatedResponse(billItems, billItemPage);
     }
 
     @Transactional
     public BillItemDto createBillItem(BillItemDto billItemDto) {
         BillItem billItem = billItemMapper.toEntity(billItemDto);
         Bill bill = billRepository.findById(billItemDto.getBillId())
-                .orElseThrow(() -> new EntityNotFoundException("Bill not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Bill not found with id: " + billItemDto.getBillId()));
         billItem.setBill(bill);
         BillItem savedBillItem = billItemRepository.save(billItem);
         return billItemMapper.toDto(savedBillItem);
     }
 
-    @Transactional(readOnly = true)
     public BillItemDto getBillItemById(Long id) {
         BillItem billItem = billItemRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Bill item not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Bill item not found with id: " + id));
         return billItemMapper.toDto(billItem);
     }
 
     @Transactional
     public BillItemDto updateBillItem(Long id, BillItemDto billItemDto) {
-        BillItem billItem = billItemRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Bill item not found"));
-        billItemMapper.updateEntityFromDto(billItemDto, billItem);
-        if (!billItem.getBill().getBillId().equals(billItemDto.getBillId())) {
+        BillItem existingBillItem = billItemRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Bill item not found with id: " + id));
+
+        BillItem updatedBillItem = billItemMapper.toEntity(billItemDto);
+        updatedBillItem.setItemId(existingBillItem.getItemId());
+
+        if (!existingBillItem.getBill().getBillId().equals(billItemDto.getBillId())) {
             Bill bill = billRepository.findById(billItemDto.getBillId())
-                    .orElseThrow(() -> new EntityNotFoundException("Bill not found"));
-            billItem.setBill(bill);
+                    .orElseThrow(() -> new ResourceNotFoundException("Bill not found with id: " + billItemDto.getBillId()));
+            updatedBillItem.setBill(bill);
+        } else {
+            updatedBillItem.setBill(existingBillItem.getBill());
         }
-        BillItem updatedBillItem = billItemRepository.save(billItem);
-        return billItemMapper.toDto(updatedBillItem);
+
+        BillItem savedBillItem = billItemRepository.save(updatedBillItem);
+        return billItemMapper.toDto(savedBillItem);
     }
 
     @Transactional
     public void deleteBillItem(Long id) {
         if (!billItemRepository.existsById(id)) {
-            throw new EntityNotFoundException("Bill item not found");
+            throw new ResourceNotFoundException("Bill item not found with id: " + id);
         }
         billItemRepository.deleteById(id);
     }
